# pqchecker

./: .gitignore  INSTALL  INSTALL.fr  Makefile.am  Makefile.in  README.fr  README.md  configure  configure.ac  pqmessenger.man  pqmessenger.man.fr
doc/: Makefile.in  README  pqchecker.3
doc/fr/: Makefile.in  pqchecker.3
doc/pkg/deb/: README.fr
doc/pkg/rpm/: README  README.fr
po/: pqchecker.pot
po/fr/: pqchecker.po  pqchecker.pot
pqmessenger/: pom.xml  pqmessenger-createkeystore.sh  pqmessenger-install.sh
pqmessenger/extra-resources/: config.xml  log4j.xml  pqmessenger  pqmessenger.conf  pqmessenger.params
pqmessenger/script/: ppmessenger
pqmessenger/src/main/config/: config.xml  log4j.xml  pqmessenger  pqmessenger.params
pqmessenger/src/main/java/net/meddeb/pqmessenger/: Entrypoint.java  JNIGateway.java  Listener.java  LoggingMsg.java  Messenger.java  Msg.java  MsgDaemon.java  MsgEngine.java
pqmessenger/src/main/java/res/: pqmsglogmsg.properties  pqmsglogmsg_fr.properties  pqmsgoutmsg.properties  pqmsgoutmsg_fr.properties
pqmessenger/src/main/resources/: log4j2.xml
pqmessenger/src/main/resources/net/meddeb/pqmessenger/: pqmsglogmsg.properties  pqmsglogmsg_fr.properties  pqmsgoutmsg.properties  pqmsgoutmsg_fr.properties
pqmessenger/sys-resources/: config.xml  log4j2.xml  pqmessenger.boot  pqmessenger.conf.rsyslog  pqmessenger.conf.tmp  pqmessenger.params  pqmessenger.service
pqmsgshared/: pom.xml
pqmsgshared/src/main/java/net/meddeb/pqmsgshared/: MsgProperties.java  MsgStatus.java  PQCRequest.java  PQCResponse.java  PQChannel.java  PQParams.java  PQParamsDto.java
pqmsgshared/src/main/resources/net/meddeb/: Pqmsg.gwt.xml
src/: JNIGateway.c  Makefile.am  Makefile.in  comm.c  comm.h  pparamio.c  pparamio.h  pqcheck.c  pqcheck.h  pqchecker.c  pqchecker.h  shmap.c  shmap.h
